--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"build": "rollup --configPlugin typescript -c",
 		"prepare": "npm run build",
 		"storybook": "start-storybook -p 6006",
+		"lint": "eslint src",
 		"build-storybook": "npm run build && build-storybook"
 	},
 	"repository": {
@@ -43,8 +44,13 @@
 		"@storybook/react": "^6.5.13",
 		"@storybook/testing-library": "^0.0.13",
 		"@types/react": "^18.0.25",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
 		"babel-loader": "^9.1.0",
 		"concurrently": "^7.6.0",
+		"eslint": "^8.34.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
